--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,8 @@ nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
+  color: #9FC088;
+}
+nav ul li a:hover {
+  border-bottom: 2px solid #E8C07D;
 }/*# sourceMappingURL=style.css.map */
