--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -3,5 +3,8 @@ $fonte: 'Roboto', sans-serif;
 
 // Cores
 $cor-primaria: #9FC088;
-$cor-secundaira: #E8C07D;
-$cor-terciaira: #CC704B;
+$cor-secundaria: #E8C07D;
+$cor-terciaria: #CC704B;
+
+//Tamanho das fontes
+$tamanho-do-texto: 3rem;
