--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -12,7 +12,7 @@ nav {
                 font-weight: bold;
                 color: $cor-primaria;
                 &:hover {
-                    border-bottom: 2px solid $cor-secundaira;
+                    border-bottom: 2px solid $cor-secundaria;
                 }
             }
         }
