--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,28 @@ nav ul li a {
 }
 nav ul li a:hover {
   border-bottom: 2px solid #E8C07D;
+}
+
+.banner {
+  background: url("../../imagens/banner.jpeg") 27% center no-repeat;
+  min-height: 350px;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.9;
+}
+.banner .inner-banner {
+  padding: 3rem;
+  background-color: #CC704B;
+  opacity: 0.9;
+  border-radius: 60px;
+}
+.banner .inner-banner h1 {
+  font-size: 3rem;
+  color: #9FC088;
+}
+.banner .inner-banner h2 {
+  font-size: 1.5rem;
+  color: #E8C07D;
 }/*# sourceMappingURL=style.css.map */
