--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -2,9 +2,9 @@
 $fonte: 'Roboto', sans-serif;
 
 // Cores
-$cor-primaria: #9FC088;
-$cor-secundaria: #E8C07D;
-$cor-terciaria: #CC704B;
+$cor-primaria: #9A86A4;
+$cor-secundaria: #B1BCE6;
+$cor-terciaria: #B7E5DD;
 
 //Tamanho das fontes
 $tamanho-do-texto: 3rem;
