--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,3 +3,5 @@
 @import './components/banner';
 @import './components/servicos';
 @import './components/cupom';
+@import './components/bemestar';
+@import './components/_footer.sass';
